todo GAPP:
- processdialog, minimize or show on taskbar. Going to desktop fails now
- add log templates
- add option to set the logcount for GPX export
- add tooltip for counters in main screen

todo GAPP SF:
- Open Areas map
- Trackable groeps

V1.9.17.0

- gapp: fix: Export to GGZ, size tag now always included, but never 1
- gappsf: fix: Export to GGZ, size tag now always included, but never 1


V1.9.16.0

- gapp: fix: Export to GGZ, size tag in index file now left out when size is 1
- gappsf: fix: Export to GGZ, size tag in index file now left out when size is 1
- gappsf: add: Menu options to delete geocaches and add them to the igore list
- gappsf: fix: Action sequences now should execute the actions sequential
- gappsf: fix: ignore geocache fix

V1.9.15.0

- gapp: fix: geocache editor, changed personal note to a multiline text field
- gapp: fix: waypoint editor, changed comment to a multiline text field
- gapp: fix: Chat, changed IP address of chat server

- gappsf: add: LiveAPI, update geocache images
- gappsf: add: LiveAPI, update geocache logs
- gappsf: add: language edit by user support
- gappsf: add: log image viewer
- gappsf: add: export garmin POI
- gappsf: change: Application Info, user can only select 1 database
- gappsf: fix: Cachelist, row now starts counting at 1
- gappsf: add: GPX export using Garmin communicator
- gappsf: fix: geocache editor, changed personal note to a multiline text field
- gappsf: fix: waypoint editor, changed comment to a multiline text field
- gappsf: add: LiveAPI, log geocaches
- gappsf: add: Integrated Chat with follow user option
- gappsf: fix: LogImages where not stored in database correctly
- gappsf: add: Internal browser

GAPP SF V0.0.22

- add: Automatic assign region (country, state, municipality, city) using loaded shapefiles
- add: Select geocaches within a region (country, state, municipality, city) using loaded shapefiles

GAPP V1.9.14.0

- fix: assignment of city can be interrupted now