@@ -16,6 +16,9 @@
             <setting name="SettingsFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="EnableSettingsFolderAtStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </GAPPSF.Properties.Settings>
     </userSettings>
 </configuration>
