@@ -1,0 +1,8 @@
+﻿<Window x:Class="GAPPSF.Dialogs.SettingsFolderWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="Settings Folder" Height="300" Width="300">
+    <Grid>
+        
+    </Grid>
+</Window>
