@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.18408
+//     Runtime Version:4.0.30319.18444
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -44,6 +44,29 @@ namespace GAPPSF.Properties {
             }
             set {
                 this["SettingsFolder"] = value;
+            }
+        }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        public global::System.Collections.Specialized.StringCollection AvailableSettingsFolders {
+            get {
+                return ((global::System.Collections.Specialized.StringCollection)(this["AvailableSettingsFolders"]));
+            }
+            set {
+                this["AvailableSettingsFolders"] = value;
+            }
+        }
+        
+        [global::System.Configuration.UserScopedSettingAttribute()]
+        [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
+        [global::System.Configuration.DefaultSettingValueAttribute("False")]
+        public bool EnableSettingsFolderAtStartup {
+            get {
+                return ((bool)(this["EnableSettingsFolderAtStartup"]));
+            }
+            set {
+                this["EnableSettingsFolderAtStartup"] = value;
             }
         }
     }
