@@ -1843,4 +1843,10 @@ This wizard will guide you through the initial setup. Before you start, you migh
   <data name="DeleteAndIgnoreGeocache" xml:space="preserve">
     <value>Delete and ignore geocache</value>
   </data>
+  <data name="LogActiveGeocache" xml:space="preserve">
+    <value>Log active geocache</value>
+  </data>
+  <data name="LogSelectedGeocaches" xml:space="preserve">
+    <value>Log selected geocaches</value>
+  </data>
 </root>
